--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,29 +13,33 @@
             android:layout_width="379dp"
             android:layout_height="401dp"
             android:layout_weight="1"
+            android:contentDescription="@string/logo_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.151"
-            app:srcCompat="@drawable/splash_logo_sec"
-            android:contentDescription="@string/logo_description"/>
+            app:srcCompat="@drawable/splash_logo_sec" />
 
         <TextView
             android:id="@+id/login_description"
-            android:layout_width="280dp"
-            android:layout_height="75dp"
-            android:layout_marginTop="28dp"
+            android:layout_width="327dp"
+            android:layout_height="101dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
             android:text="@string/login_description"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_image" />
+            app:layout_constraintTop_toBottomOf="@+id/login_image"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/login_button"
             android:layout_width="256dp"
             android:layout_height="48dp"
+            android:layout_marginBottom="32dp"
             android:background="@drawable/login_button_background"
             android:drawableStart="@drawable/local_library_container_primary"
             android:text="@string/login_button_text"
@@ -44,6 +49,6 @@
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_description"
-            app:layout_constraintVertical_bias="0.514" />
+            app:layout_constraintVertical_bias="0.776" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
