--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <fragment
-                android:id="@+id/loginFragment"
-                android:name="com.example.ebookreader.login.LoginFragment"
+                android:id="@+id/myNavHostFragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/navigation"
                 />
         </LinearLayout>
 </layout>
