Added selection UI.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
     <color name="colorOnErrorContainer">#A6A55D</color>
 
     <color name="divider">#E0E0E0</color>
+    <color name="selected_overlay">#A741D2B3</color>
 
 </resources>
