--- a/app/src/main/res/layout/file_container.xml
+++ b/app/src/main/res/layout/file_container.xml
@@ -10,6 +10,9 @@
         app:cardElevation="5dp"
         android:theme="@style/Theme.EBookReader">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -49,5 +52,13 @@
                 android:layout_height="1dp"
                 android:background="@color/divider" />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/item_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/selected_overlay"
+            android:visibility="invisible"
+            android:orientation="horizontal" />
+        </FrameLayout>
     </androidx.cardview.widget.CardView>
 </layout>
