--- a/app/src/main/res/layout/fragment_file_explorer.xml
+++ b/app/src/main/res/layout/fragment_file_explorer.xml
@@ -34,7 +34,8 @@
             android:id="@+id/recycler_explorer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
         </androidx.recyclerview.widget.RecyclerView>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -49,7 +50,7 @@
                 android:layout_marginStart="30dp"
                 android:background="@drawable/button_primary_background"
                 android:fontFamily="@font/montserrat"
-                android:text="Back"
+                android:text="Go back"
                 android:textAllCaps="false"
                 android:textColor="@color/colorOnPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +64,7 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/button_primary_background"
                 android:fontFamily="@font/montserrat"
-                android:text="OK"
+                android:text="This is it!"
                 android:textAllCaps="false"
                 android:textColor="@color/colorOnPrimary"
                 app:cornerRadius="10dp"
